2005-03-31  Sven Panne  <sven.panne@aedion.de>

	* linux/src/arch/darwin/CVS_Update.txt,
	linux/src/arch/darwin/Tests_Results.rtf: Added.

	* "linux/src/arch/darwin/CVS Update.txt",
	"linux/src/arch/darwin/Tests Results.rtf": Removed. Filenames with
	whitespace are more trouble with shell scripting than they are
	worth.

2005-03-25  Sven Panne  <sven.panne@aedion.de>	

	* linux/test/teststrings.c: Fixed context/device handling to make
	valgrind's memory leak checker happy plus a few cosmetic changes.

	* linux/configure.ac, linux/src/al_config.c, linux/src/al_debug.c,
	linux/src/al_ext.c, linux/src/al_main.c, linux/src/al_rcvar.c,
	linux/src/arch/alsa/alsa.c, linux/src/arch/arts/arts.c,
	linux/src/arch/esd/esd.c, linux/src/arch/linux/lin_dsp.c,
	linux/src/arch/solaris/solaris_native.c,
	linux/src/arch/waveout/waveout.c,
	linux/src/arch/windows/windows_native.c,
	linux/src/extensions/al_ext_capture.c: Never use
	strcpy/strcyt/sprintf, use their safe relatives
	strncpy/strncat/snprintf instead.

	* linux/src/configure.ac: <alsa/asoundlib.h> needs <time.h> when
	ISO C99 is enabled.

	* linux/src/al_config.c: As mentioned in the docs, try system wide
	config file in /etc if no user-specific one is found.

2005-03-23  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in, linux/config-osx.h, linux/configure.ac,
	linux/openal-config.in, linux/openal.pc.in,
	linux/audioconvert/Makefile.in, linux/src/Makefile.in,
	linux/src/al_state.c: Centralize and simplify versionitis;
	everything is derived from the PACKAGE_VERSION defined via AC_INIT
	now.

	* linux/src/Makefile.in: Avoid useless relinking.

	* linux/audioconvert/Makefile.in: The test audioconvert test
	program is now called "test_ac". Using plain "test" could have
	been very surprising depending on your shell/PATH/..., because it
	is a very common shell builtin.

	* linux/audioconvert/test.c: Removed.

	* linux/audioconvert/test_ac.c: Added.

	* linux/Makefile.in, linux/audioconvert/Makefile.in,