@@ -192,7 +192,7 @@ ALfloat _alVectorDotp( const ALfloat *origin, const ALfloat *v1,
  *
  * Returns cross product between v1 and v2, result in d.
  */
-ALvoid _alVectorCrossProduct( ALfloat *d, const ALfloat *v1,
+void _alVectorCrossProduct( ALfloat *d, const ALfloat *v1,
 			      const ALfloat *v2 ) {
 	d[0] = v1[1] * v2[2] - v1[2] * v2[1];
 	d[1] = v1[2] * v2[0] - v1[0] * v2[2];
